# ReconOS_Zephyr_RISCV

./: .gitignore  .gitmodules  README.md  install.sh  settings.sh
neorv32-setups/NEORV32/rtl/core/: neorv32_dmem.entity.vhd
neorv32-setups/NEORV32/rtl/system_integration/: neorv32_SystemTop_axi4lite.vhd
neorv32-setups/NEORV32/sw/common/: common.mk  (+1 more)
neorv32-setups/vivado/basys3-test-setup/: .gitignore  create_project.tcl
reconos-neorv32/: .gitignore  AUTHORS
reconos-neorv32/constraints/: Basys-3-Master.xdc  zcu104-Master.xdc
reconos-neorv32/demos/matrixmul/: build.cfg
reconos-neorv32/demos/matrixmul_zephyr/: build.cfg
reconos-neorv32/demos/sort_demo/: build.cfg
reconos-neorv32/demos/sort_demo_zephyr/: build.cfg  vivado.jou
reconos-neorv32/lib/calls/: reconos_calls_hls.h
reconos-neorv32/templates/app_linux/: Makefile
reconos-neorv32/templates/app_zephyr/: CMakeLists.txt  app.overlay  prj.conf
reconos-neorv32/templates/app_zephyr/src/lib/: CMakeLists.txt
reconos-neorv32/templates/app_zephyr/src/lib/include/: blink.h  reconos_app.h
reconos-neorv32/templates/app_zephyr/src/lib/runtime/: reconos.c  reconos.h  utils.h
reconos-neorv32/templates/app_zephyr/src/lib/runtime/arch/: arch.h  arch_xilkernel.c  interrupt.c  interrupt.h  timer.c
reconos-neorv32/templates/app_zephyr/src/lib/runtime/comp/: blink.c  mbox.c
reconos-neorv32/templates/ref_linux_basys3_neorv32_timer_vivado/: create_ip_library.tcl  export.tcl
reconos-neorv32/templates/ref_zephyr_zcu104_neorv32_timer_vivado/: create_ip_library.tcl  export.tcl
reconos-neorv32/tools/: settings.sh
(+22 files in other folders)
